# panda-softhand

./: README.md
panda_dual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_dual_moveit_config/config/: default_combined_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  panda_controllers1.yaml  panda_controllers2.yaml  panda_dual.srdf  ros_controllers.yaml
panda_dual_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  panda_dual_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
panda_softhand/: CMakeLists.txt  package.xml
panda_softhand_control/: CMakeLists.txt  README.md  package.xml
panda_softhand_control/configs/: config.rviz  config_2robot2.rviz  endeffector-config.json  grasp_params.yaml  grasp_params_1.yaml  grasp_params_2.yaml  panda_moveit.rviz  task_sequences_params.yaml  task_sequences_params_pick_and_place.yaml  task_sequences_params_pick_and_throw.yaml
panda_softhand_control/include/: JointControl.h  PandaSoftHandClient.h  SlerpControl.h  TaskSequencer.h
panda_softhand_control/include/panda_softhand_control/: ArmControl.h  ArmControl_1.h  ArmControl_2.h  ArmControl_trial.h  GraspFailure.h  HandControl.h  HandControlFirstSyn.h  HandControlSecondSyn.h  HandControl_1.h  HandControl_2.h  HandPlan.h  HandPlanFirstSyn.h  HandPlanSecondSyn.h  HandPlan_1.h  HandPlan_2.h  JointPlan.h  JointPlan_1.h  JointPlan_2.h  PandaSoftHandClient.h  PandaSoftHandClient_1.h  PandaSoftHandClient_2.h  PoseControl.h  PosePlan.h  PosePlan_1.h  PosePlan_2.h  ReGrasp.h  SlerpControl.h  SlerpPlan.h  SlerpPlan_1.h  SlerpPlan_2.h  TaskSequencer.h
panda_softhand_control/include/utils/: parsing_utilities.h  utilities.h
panda_softhand_control/launch/: ire_paolo_combined.launch  launchControlServer.launch  launchDemoMakerFaire.launch  launchPandaSoftHand_ControlServer.launch  launchSimulateObjectPose.launch  launchSteLancio.launch  launchTaskServer.launch  launchTaskServerDemo.launch  launchTaskServerDemo_onlyPickAndPlace.launch  launchTaskServerDemo_onlyPickAndThrow.launch  launchTaskServerLancio.launch  launch_dual_robot.launch  launch_grasp.launch  launch_grasp_1.launch  launch_grasp_2.launch  launch_robot.launch  launch_robot_2.launch  launch_robot_2unico.launch  launch_rviz_2robot.launch  ros_bag_record.launch  run_arduino.launch
panda_softhand_control/src/: ArmControl.cpp  ArmControl_1.cpp  ArmControl_2.cpp  ArmControl_trial.cpp  GraspFailure.cpp  HandControl.cpp  HandControlFirstSyn.cpp  HandControlSecondSyn.cpp  HandControl_1.cpp  HandControl_2.cpp  HandPlan.cpp  HandPlanFirstSyn.cpp  HandPlanSecondSyn.cpp  HandPlan_1.cpp  HandPlan_2.cpp  JointControl.cpp  JointPlan.cpp  JointPlan_1.cpp  JointPlan_2.cpp  PandaSoftHandClient.cpp  PandaSoftHandClient_1.cpp  PandaSoftHandClient_2.cpp  PoseControl.cpp  PosePlan.cpp  PosePlan_1.cpp  PosePlan_2.cpp  ReGrasp.cpp  SdfToPlanningScene.cpp  SlerpControl.cpp  SlerpPlan.cpp  SlerpPlan_1.cpp  SlerpPlan_2.cpp  TaskSequencer.cpp  control_server.cpp  control_server_2.cpp  grasp.cpp  grasp_robot_1.cpp  grasp_robot_2.cpp  hello.cpp  task_server.cpp  (+7 more)
panda_softhand_control/src/utils/: parsing_utilities.cpp  utilities.cpp
panda_softhand_control/srv/: complex_grasp.srv  hand_plan.srv  slerp_plan.srv
panda_softhand_description/: CMakeLists.txt  package.xml
panda_softhand_description/configs/: panda_darko.rviz  panda_soma.rviz
panda_softhand_description/json/: qb_SoftHand2_Research.json
panda_softhand_description/launch/: display_panda_wrist_softhand.launch  launchCollisionScene.launch  launchPandaSoftHand.launch  launchPandaSoftHand_fake.launch  launchSoftHand2.launch  launchSofthand1.launch  launchTestSofthand2.launch  testSofthand1.launch
panda_softhand_description/robot/: panda_softhand.urdf.xacro  panda_softhand_2robot.urdf.xacro
panda_softhand_description/robot/arm/: darko_franka_robot.xacro
panda_softhand_description/robot/urdf/: panda_softhand.urdf.xacro
panda_softhand_description/robot/utils/: decorations.xacro  properties.xacro
panda_softhand_description/rviz/: moveit.rviz  urdf_all.rviz
panda_softhand_description/worlds/: panda_darko.world  panda_darko_Navacchio_scaffalatura.world  panda_grasp.world  panda_soma.world
panda_softhand_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
panda_softhand_moveit_config/config/: arm.xacro  fake_controllers.yaml  gazebo_panda_softhand.urdf  hand.xacro  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf.xacro  panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  panda_controllers.yaml  panda_controllers1.yaml  panda_controllers2.yaml  panda_softhand.srdf  ros_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
panda_softhand_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_chomp.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  lerp_planning_pipeline.launch.xml  move_group.launch  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  panda_control_moveit_rviz.launch  panda_gripper_moveit_controller_manager.launch.xml  panda_moveit.launch  panda_moveit_controller_manager.launch.xml  panda_softhand_moveit_controller_manager.launch.xml  panda_softhand_planning_execution.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  run_benchmark_trajopt.launch  sensor_manager.launch.xml  warehouse.launch  (+5 more)
panda_softhand_msgs/: CMakeLists.txt  package.xml
panda_softhand_safety/: CMakeLists.txt  package.xml
(+12 files in other folders)
