<?xml version="1.0"?>
<package format="2">
  <name>panda_softhand</name>
  <version>1.0.0</version>
  <description>The panda_softhand package</description>

  <author email="georgejose.pollayil@phd.unipi.it">George Jose Pollayil</author>
  <maintainer email="mathewjose.pollayil@phd.unipi.it">Mathew Jose Pollayil</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>panda_softhand_description</exec_depend>
  <exec_depend>panda_softhand_control</exec_depend>
  <exec_depend>panda_softhand_safety</exec_depend>
  <exec_depend>panda_softhand_moveit_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>