<?xml version="1.0"?>
<package>
  <name>panda_softhand_description</name>
  <version>1.0.0</version>
  <description>The panda_softhand_description package</description>

  <author email="georgejose.pollayil@phd.unipi.it">George Jose Pollayil</author>
  <maintainer email="mathewjose.pollayil@phd.unipi.it">Mathew Jose Pollayil</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>franka_description</build_depend>
  <build_depend>qb_hand_description</build_depend>

  <run_depend>franka_description</run_depend>
  <run_depend>qb_hand_description</run_depend>


  <export>
  </export>
</package>